data/derived/comb/progs/unify/prog2572.ml.out
Characters 90-94:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type ('a -> 'b) * 'a -> ('a -> 'b) * 'a
       but an expression was expected of type ('a -> 'b) * 'a -> 'b
       The type variable 'b occurs inside ('a -> 'b) * 'a
